# hippocampx

./: .gitignore  136-single-number-correct.mdx  347-top-k-frequent-elements.mdx  CLAUDE.md  README.md  TESTING-LINE-RANGE-HIGHLIGHTING.md  code-tooltip.md  components.json  debug-tooltip.ts  drizzle.config.ts  eslint.config.mjs  gradient-guide.mdx  mdx-components.tsx  next.config.js  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  test-activity-node.mjs  test-extraction.ts  test-setup.ts  tsconfig.json  vitest.browser.config.ts  vitest.config.ts
backend/: .coverage  Makefile  README.md  TESTING.md  main.py  pyproject.toml  requirements.txt
backend/algorithms/: backtrack.py  bellman-ford.py  bfs.py  blackboard.py  blackboard2.py  dp.py  kadane.py  prefix_sum.py  sliding_window.py  stack.py  stocks.py  tic-tac-toe.py  trie.py
backend/algorithms/core/Tree/: binary_tree_node.py
backend/algorithms/core/bellman-ford/: __init__.py  classic.py  layered_dag.py
backend/algorithms/core/binary-search/: __init__.py  bisect_left.py  bisect_right.py
backend/algorithms/core/dijkstra/: __init__.py  algorithm.py
backend/algorithms/core/dp/: __init__.py  _interval.mdx
backend/algorithms/core/modular-arithmetic/: __init__.py  congruent1.py  congruent2.py  mod.py
backend/algorithms/games/: JumpGameIV.py  stone_3.py  sudoku_solver.py  valid_sudoku.py
backend/algorithms/more/tictactoe/: game.py  runner_old.py  tictactoe copy 2.py  tictactoe copy.py  tictactoe-minimax.py  tictactoe_no_player_in_state.py  tictactoe_old.py
backend/algorithms/problems/1-two-sum/: __init__.py  solution.py
backend/algorithms/problems/1000-minimum-cost-to-merge-stones/: __init__.py  solution.py
backend/algorithms/problems/1011-capacity-to-ship-packages-within-d-days/: __init__.py  solution.py
backend/algorithms/problems/102-binary-tree-level-order-traversal/: __init__.py  similar.py  solution.py
backend/algorithms/problems/105-construct-binary-tree-from-preorder-and-inorder-traversal/: __init__.py  solution.py
backend/algorithms/problems/1094-car-pooling/: __init__.py  solution.py
backend/algorithms/problems/1143-longest-common-subsequence/: __init__.py  (+3 more)
backend/api/: tic_tac_toe.py
backend/api/tic-tac-toe/: README.md  api_models.py  api_server.py  game_logic.py  main.py  requirements.txt
backend/games/: tic_tac_toe.py
backend/games/tic-tac-toe/: tic-tac-toe.py
backend/scripts/: extract_metadata.md  extract_metadata.py
backend/scripts/problems/: GENERATE_MDX_REQUIREMENTS.md  __init__.py  code_cleaner.py  code_cleaner_new.py  create_problem.py  docstring_parser.py  extract_problems_metadata copy.py  extract_problems_metadata.py  filter_uses.py  generate_algorithm_dictionary.py  generate_comments_inline.py  generate_expressions.py  generate_lsp_index.py  generate_navigation_metadata.py  generate_symbol_tags copy 2.py  generate_symbol_tags copy.py  generate_symbol_tags.py  generate_uses copy.py  generate_uses.py  get_directory_timestamps.py  list_problems.py  sync_problems_to_db.py  transform-field-to-lists.py
backend/tests/: __init__.py  conftest.py  utils.py
backend/tests/algorithms/: __init__.py  test_expressions.py
backend/tests/metadata/: __init__.py
(+2781 files in other folders)
